// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Size /> should render a child by applying height, width, maxHeight, maxWidth, minWidth, minHeight 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Sizeweb__Size-sc-1e5yf1-0 bVzpkB"
  />
</div>
`;

exports[`<Size /> should render a child by applying height, width, maxHeight, maxWidth, minWidth, minHeight in numeric values 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Sizeweb__Size-sc-1e5yf1-0 cQpEFs"
  />
</div>
`;

exports[`<Size /> should render a child component without any sizing properties being applied 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Sizeweb__Size-sc-1e5yf1-0 kqYdGh"
  />
</div>
`;
